Bug 84401 - no teletext/videotext with Kernel: 3.16
Summary: no teletext/videotext with Kernel: 3.16
Status: RESOLVED CODE_FIX
Alias: None
Product: v4l-dvb
Classification: Unclassified
Component: saa7134 (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: v4l-dvb_saa7134@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-12 15:05 UTC by keellambert
Modified: 2014-11-17 09:50 UTC (History)
3 users (show)

See Also:
Kernel Version: Kernel: 3.16
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description keellambert 2014-09-12 15:05:21 UTC
no problems found with Kernel: 3.15 and teletext with mtt
no teletext/videotext with Kernel: 3.16 and mtt

tvtime works ok for analog tv reception with both kernels

part output of lsmod | sort with kernel 3.16 
(teletext/videotext NOT available with this configuration)
Module               Size Used	by
rc_core             32765  1    saa7134
saa7134            191156  1    saa7134_alsa
saa7134_alsa        18553  1 
tveeprom            21216  1    saa7134
v4l2_common         15265  2    saa7134,videobuf2_core
videobuf2_core      63200  1    saa7134
videobuf2_dma_sg    13147  1    saa7134
videobuf2_memops    13362  1    videobuf2_dma_sg
videodev           157329  3    saa7134,v4l2_common,videobuf2_core

part output of lsmod | sort with kernel 3.15 
(teletext/video text available with this configuration)
Module               Size Used	by
rc_core             32765  1    saa7134
saa7134            194646  2    saa7134_alsa
saa7134_alsa        18437  1 
tveeprom            21216  1    saa7134
v4l2_common         15265  1    saa7134
videobuf_core       30119  2    videobuf_dma_sg,saa7134
videobuf_dma_sg     19262  2    saa7134,saa7134_alsa
videodev           156655  3    saa7134,v4l2_common
Comment 1 Hans Verkuil 2014-09-15 11:52:55 UTC
Reproduced and the problem is found. It's not clear what the correct solution is, see this thread I've just started:

http://permalink.gmane.org/gmane.linux.drivers.video-input-infrastructure/82175
Comment 2 Mauro Carvalho Chehab 2014-09-24 10:42:39 UTC
The alevt and mtt apps were expecting that a call to poll() would either start VBI streaming or to return POLLERR. As VB2 were not implementing such behavior, the VBI were never being started.

A fix is being sent today upstream for Kernel 3.17. A separate backport will be needed for Kernel 3.16 afterwards.
Comment 3 michael lambert 2014-10-01 10:57:59 UTC
now works with Kernel: 3.17.0-rc7-1.gd2bbe7f-desktop x86_64 (64 bit) installed

no joy yet with upto Kernels 3.16.3-1.gd2bbe7f-desktop x86_64 (64 bit)

thx
Comment 4 Hans Verkuil 2014-10-01 11:09:03 UTC
I haven't prepared a patch for kernels <= 3.16 yet. I hope to do that some time this week or the upcoming weekend.
Comment 5 Hans Verkuil 2014-10-07 10:19:32 UTC
The patches for 3.10, 3.14 and 3.16 have been posted and are accepted.

They should appear in the next stable releases for those kernels.
Comment 6 michael lambert 2014-10-11 20:23:10 UTC
kernel 3.15 was never a problem up to 3.15.8-2.g258e3b0-desktop x86_64

now moved to 3.17.0-1.gc467423-desktop x86_64 which includes the update

hence here this bug is closed

thx again
Comment 7 michael lambert 2014-11-16 15:32:26 UTC
As the fix has now been included in kernel-3.17,
it was never found a problem in kernel-3.15
and kernel-3.16 is now EOL

this bug is considered as closed
but cannot change status from this i/f

Note You need to log in before you can comment on or make changes to this bug.